--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@
 	<div class="full">
 		<div class="left">
 			<div class="image">
-				<img src="cv/my-photo.jpg" alt="my-photo" style="width:110px;height:125px;border-radius: 70%; margin-left: 30%;">
+				<img src="my-photo.jpg" alt="my-photo" style="width:110px;height:125px;border-radius: 70%; margin-left: 30%;">
 			</div>
 			<div class="Contact">
 				<h2>Contact</h2>
