--- a/cv/index.html
+++ b/cv/index.html
@@ -16,7 +16,7 @@
 			</div>
 			<div class="Contact">
 				<h2>Contact</h2>
-				<p><b>Email id : </b>rakibict@stud.cou.ac.bd</p>
+				<p><b>Email id : </b>rkblriyad@gmail.com</p>
 				<p><b>Mobile no : </b>+8801643690085</p>
 				<p><b>Portfolio : </b><a href="https://rkbrd.github.io">rkbrd.github.io</a></p>
 			</div>
