--- a/cgpa-calculator/index.html
+++ b/cgpa-calculator/index.html
@@ -20,7 +20,41 @@
                 <td><input type="number" step="0.01" name="cgpa1"></td>
                 <td><input type="number" name="credits1"></td>
             </tr>
-            <!-- Repeat the above row for 7 more rows -->
+            <tr>
+                <td>2</td>
+                <td><input type="number" step="0.01" name="cgpa2"></td>
+                <td><input type="number" name="credits2"></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td><input type="number" step="0.01" name="cgpa3"></td>
+                <td><input type="number" name="credits3"></td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td><input type="number" step="0.01" name="cgpa4"></td>
+                <td><input type="number" name="credits4"></td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td><input type="number" step="0.01" name="cgpa5"></td>
+                <td><input type="number" name="credits5"></td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td><input type="number" step="0.01" name="cgpa6"></td>
+                <td><input type="number" name="credits6"></td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td><input type="number" step="0.01" name="cgpa7"></td>
+                <td><input type="number" name="credits7"></td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td><input type="number" step="0.01" name="cgpa8"></td>
+                <td><input type="number" name="credits8"></td>
+            </tr>
         </table>
         <button type="submit">Calculate</button>
     </form>
