--- a/cgpa-calculator/index.html
+++ b/cgpa-calculator/index.html
@@ -11,49 +11,49 @@
     <form id="cgpa-form">
         <table>
             <tr>
-                <th>Course</th>
+                <th>Semester</th>
                 <th>CGPA</th>
                 <th>Credits</th>
             </tr>
             <tr>
-                <td>1</td>
+                <td>1st Semester</td>
                 <td><input type="number" step="0.01" name="cgpa1"></td>
-                <td><input type="number" name="credits1"></td>
+                <td><input type="number" name="credits1" value="18"></td>
             </tr>
             <tr>
-                <td>2</td>
+                <td>2nd Semester</td>
                 <td><input type="number" step="0.01" name="cgpa2"></td>
-                <td><input type="number" name="credits2"></td>
+                <td><input type="number" name="credits2" value="18"></td>
             </tr>
             <tr>
-                <td>3</td>
+                <td>3rd Semester</td>
                 <td><input type="number" step="0.01" name="cgpa3"></td>
-                <td><input type="number" name="credits3"></td>
+                <td><input type="number" name="credits3" value="21"></td>
             </tr>
             <tr>
-                <td>4</td>
+                <td>4th Semester</td>
                 <td><input type="number" step="0.01" name="cgpa4"></td>
-                <td><input type="number" name="credits4"></td>
+                <td><input type="number" name="credits4" value="23"></td>
             </tr>
             <tr>
-                <td>5</td>
+                <td>5th Semester</td>
                 <td><input type="number" step="0.01" name="cgpa5"></td>
-                <td><input type="number" name="credits5"></td>
+                <td><input type="number" name="credits5" value="20"></td>
             </tr>
             <tr>
-                <td>6</td>
+                <td>6th Semester</td>
                 <td><input type="number" step="0.01" name="cgpa6"></td>
-                <td><input type="number" name="credits6"></td>
+                <td><input type="number" name="credits6" value="20"></td>
             </tr>
             <tr>
-                <td>7</td>
+                <td>7th Semester</td>
                 <td><input type="number" step="0.01" name="cgpa7"></td>
-                <td><input type="number" name="credits7"></td>
+                <td><input type="number" name="credits7" value="20"></td>
             </tr>
             <tr>
-                <td>8</td>
+                <td>8th Semester</td>
                 <td><input type="number" step="0.01" name="cgpa8"></td>
-                <td><input type="number" name="credits8"></td>
+                <td><input type="number" name="credits8" value="20"></td>
             </tr>
         </table>
         <button type="submit">Calculate</button>
