--- a/cgpa-calculator/index.html
+++ b/cgpa-calculator/index.html
@@ -25,7 +25,36 @@
                 <td><input type="number" step="0.01" name="cgpa2" required></td>
                 <td><input type="number" name="credits2" value="18" required></td>
             </tr>
-            <!-- Repeat the same for other rows -->
+            <tr>
+                <td>3rd Semester</td>
+                <td><input type="number" step="0.01" name="cgpa3" required></td>
+                <td><input type="number" name="credits3" value="21" required></td>
+            </tr>
+            <tr>
+                <td>4th Semester</td>
+                <td><input type="number" step="0.01" name="cgpa4" required></td>
+                <td><input type="number" name="credits4" value="23" required></td>
+            </tr>
+            <tr>
+                <td>5th Semester</td>
+                <td><input type="number" step="0.01" name="cgpa5" required></td>
+                <td><input type="number" name="credits5" value="20" required></td>
+            </tr>
+            <tr>
+                <td>6th Semester</td>
+                <td><input type="number" step="0.01" name="cgpa6" required></td>
+                <td><input type="number" name="credits6" value="20" required></td>
+            </tr>
+            <tr>
+                <td>7th Semester</td>
+                <td><input type="number" step="0.01" name="cgpa7" required></td>
+                <td><input type="number" name="credits7" value="20" required></td>
+            </tr>
+            <tr>
+                <td>8th Semester</td>
+                <td><input type="number" step="0.01" name="cgpa8" required></td>
+                <td><input type="number" name="credits8" value="20" required></td>
+            </tr>
         </table>
         <button type="submit">Calculate</button>
     </form>
