--- a/cgpa-calculator/index.html
+++ b/cgpa-calculator/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>CGPA Calculator</h1>
+    <h1>Overall CGPA Calculator</h1>
     <form id="cgpa-form">
         <table>
             <tr>
