--- a/cgpa-calculator/index.html
+++ b/cgpa-calculator/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Overall CGPA Calculator</h1>
+    <h1>CGPA Calculator</h1>
     <form id="cgpa-form">
         <table>
             <tr>
@@ -17,43 +17,43 @@
             </tr>
             <tr>
                 <td>1st Semester</td>
-                <td><input type="number" step="0.01" name="cgpa1" required></td>
-                <td><input type="number" name="credits1" value="18" required></td>
+                <td><input type="number" step="0.01" name="cgpa1"></td>
+                <td><input type="number" name="credits1" value="18"></td>
             </tr>
             <tr>
                 <td>2nd Semester</td>
-                <td><input type="number" step="0.01" name="cgpa2" required></td>
-                <td><input type="number" name="credits2" value="18" required></td>
+                <td><input type="number" step="0.01" name="cgpa2"></td>
+                <td><input type="number" name="credits2" value="18"></td>
             </tr>
             <tr>
                 <td>3rd Semester</td>
-                <td><input type="number" step="0.01" name="cgpa3" required></td>
-                <td><input type="number" name="credits3" value="21" required></td>
+                <td><input type="number" step="0.01" name="cgpa3"></td>
+                <td><input type="number" name="credits3" value="21"></td>
             </tr>
             <tr>
                 <td>4th Semester</td>
-                <td><input type="number" step="0.01" name="cgpa4" required></td>
-                <td><input type="number" name="credits4" value="23" required></td>
+                <td><input type="number" step="0.01" name="cgpa4"></td>
+                <td><input type="number" name="credits4" value="23"></td>
             </tr>
             <tr>
                 <td>5th Semester</td>
-                <td><input type="number" step="0.01" name="cgpa5" required></td>
-                <td><input type="number" name="credits5" value="20" required></td>
+                <td><input type="number" step="0.01" name="cgpa5"></td>
+                <td><input type="number" name="credits5" value="20"></td>
             </tr>
             <tr>
                 <td>6th Semester</td>
-                <td><input type="number" step="0.01" name="cgpa6" required></td>
-                <td><input type="number" name="credits6" value="20" required></td>
+                <td><input type="number" step="0.01" name="cgpa6"></td>
+                <td><input type="number" name="credits6" value="20"></td>
             </tr>
             <tr>
                 <td>7th Semester</td>
-                <td><input type="number" step="0.01" name="cgpa7" required></td>
-                <td><input type="number" name="credits7" value="20" required></td>
+                <td><input type="number" step="0.01" name="cgpa7"></td>
+                <td><input type="number" name="credits7" value="20"></td>
             </tr>
             <tr>
                 <td>8th Semester</td>
-                <td><input type="number" step="0.01" name="cgpa8" required></td>
-                <td><input type="number" name="credits8" value="20" required></td>
+                <td><input type="number" step="0.01" name="cgpa8"></td>
+                <td><input type="number" name="credits8" value="20"></td>
             </tr>
         </table>
         <button type="submit">Calculate</button>
